Fix some alignment issues

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -37,13 +37,14 @@ h2, table {
 
 td {
 	padding: 1px;
-	padding-right: 4px;
+	padding-left: 2px;
+	padding-right: 2px;
 	text-align: center;
 	min-width: 30px;
 }
 
-.none {
-	font-style: normal;
+td:nth-child(1) {
+	text-align: left;
 }
 
 footer {
